# ROS-Programming-Building-Powerful-Robots

./: .gitignore  README.md
Module01/Chapter03/: package.xml
Module01/Chapter04/chapter4_tutorials/: package.xml
Module01/Chapter05/chapter5_tutorials/: CMakeLists.txt  package.xml
Module01/Chapter06/chapter6_tutorials/: CMakeLists.txt  package.xml
Module01/Chapter06/chapter6_tutorials/launch/: chapter9_configuration_gazebo.launch  move_base.launch
Module01/Chapter06/robot1_description/urdf/: robot1_base_04.xacro
Module01/Chapter08/chapter8_tutorials/: package.xml
Module01/Chapter09/chapter9_tutorials/: CMakeLists.txt  package.xml
Module01/Chapter09/chapter9_tutorials/cfg/: Camera.cfg  CameraStereo.cfg  Homography.cfg
Module01/Chapter10/chapter10_tutorials/: CMakeLists.txt  package.xml
Module02/Chapter02/mastering_ros_robot_description_pkg/urdf/: diff_wheeled_robot.xacro  seven_dof_arm.xacro  wheel.urdf.xacro
Module02/Chapter09/mastering_ros_robot_description_pkg/: README.md
Module02/Chapter09/mastering_ros_robot_description_pkg/urdf/: 7_dof_arm (another copy).xacro  diff_wheeled_robot_bkup.xacro  seven_dof_arm.urdf  seven_dof_arm.xacro  test.urdf
Module02/Chapter09/mastering_ros_robot_description_pkg/urdf/bkup/: 7_dof_arm (copy).xacro  7_dof_arm.urdf  7_dof_arm.xacro
