<?xml version="1.0"?>
<package>
  <name>chapter8_tutorials</name>
  <version>0.0.0</version>
  <description>The chapter8_tutorials package</description>
  <maintainer email="luis.sc@subseamechatronics.com">Luis</maintainer>
  <license>TODO</license>
 <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <export>
  </export>
</package>
